<resources>
    <string name="app_name">American Ten Pin Bowling</string>
    <string name="button_clean">C</string>
    <string name="button_cancel">cc</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">X</string>
    <string name="button_5">4</string>
    <string name="button_6">5</string>
    <string name="button_7">6</string>
    <string name="button_8">/</string>
    <string name="button_9">7</string>
    <string name="button_10">8</string>
    <string name="button_11">9</string>
    <string name="button_12">-</string>
    <string name="button_calculateScore">=</string>
    <string name="enter_your_line_of_rolls">Enter your line of rolls</string>
</resources>
