<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kata.bowling.kotlin.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/TextView_height"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/TextView_margin"
        android:background="@drawable/text_view_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayText"
            style="@style/DisplayTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            android:text="@string/enter_your_line_of_rolls" />

        <TextView
            android:id="@+id/resultText"
            style="@style/ResultViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            tools:text="5/8/43x" />

    </LinearLayout>

    <GridLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/gridLayoutMargin"
        android:columnCount="4"
        android:rowCount="5">

    <Button
        android:id="@+id/button_clean"
        android:tag="clean"
        style="@style/ButtonAction"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/button_clean"
        android:background="@drawable/round_button_action"
        android:focusable="true" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/ButtonAction"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/button_cancel"
        android:background="@drawable/round_button_action"
        android:focusable="true" />

    <Button
        android:id="@+id/button_1"
        style="@style/ButtonRollDigit"
        android:tag="1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/button_1"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_2"
        style="@style/ButtonRollDigit"
        android:tag="2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/button_2"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_3"
        style="@style/ButtonRollDigit"
        android:tag="3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/button_3"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_4"
        style="@style/ButtonRollChar"
        android:tag="X"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/button_4"
        android:background="@drawable/round_button_rollchar"
        android:focusable="true"/>

    <Button
        android:id="@+id/button_5"
        style="@style/ButtonRollDigit"
        android:tag="4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/button_5"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_6"
        style="@style/ButtonRollDigit"
        android:tag="5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/button_6"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_7"
        style="@style/ButtonRollDigit"
        android:tag="6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/button_7"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_8"
        style="@style/ButtonRollChar"
        android:tag="/"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/button_8"
        android:background="@drawable/round_button_rollchar"
        android:focusable="true" />

    <Button
        android:id="@+id/button_9"
        style="@style/ButtonRollDigit"
        android:tag="7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/button_9"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true" />

    <Button
        android:id="@+id/button_10"
        style="@style/ButtonRollDigit"
        android:tag="8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/button_10"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true"/>

    <Button
        android:id="@+id/button_11"
        style="@style/ButtonRollDigit"
        android:tag="9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/button_11"
        android:background="@drawable/round_button_rolldigit"
        android:focusable="true"/>

    <Button
        android:id="@+id/button_12"
        style="@style/ButtonRollChar"
        android:tag="-"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/button_12"
        android:background="@drawable/round_button_rollchar"
        android:focusable="true"/>

    <Button
        android:id="@+id/button_calculateScore"
        style="@style/ButtonAction"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_width"
        android:layout_margin="@dimen/button_margin"
        android:clickable="true"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/button_calculateScore"
        android:background="@drawable/round_button_action"
        android:focusable="true" />

    </GridLayout>
</LinearLayout>
